<resources>
    <string name="app_name">test2</string>
    <string name="open_bt">打开蓝牙</string>
    <string name="search">搜索设备</string>
    <string name="send_msg">发送消息</string>
    <string name="connect_error">连接失败</string>
    <string name="connect_success">连接成功</string>
    <string name="connecting">连接中</string>
    <string name="connect_state">连接状态</string>
    <string name="send_msgs">发送数据：</string>
    <string name="send_msg_error">发送数据失败：</string>
    <string name="get_msg">获取到数据：</string>
    <string name="bonded">已配对设备</string>
    <string name="search_result">附近设备</string>
</resources>
